log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-status        # emptyDir, writer<->reader (from 1.10)
          emptyDir: {}
        - name: shared-storage       # PVC, shared with pingpong
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: writer
          image: log-output-writer:1.10
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: shared-status
              mountPath: /usr/src/app/files
        - name: reader
          image: log-output-reader:1.11
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: shared-status
              mountPath: /usr/src/app/files
            - name: shared-storage
              mountPath: /usr/src/app/shared
